--- a/index.html
+++ b/index.html
@@ -3,98 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MASTER RG - ROYAL WHITE EDITION</title>
+    <title>MASTER RG - FINAL EDITION</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap" rel="stylesheet">
     <style>
-        :root {
-            --royal-bg: #ffffff; /* بياض ملكي */
-            --owner-theme: linear-gradient(45deg, #ff0000, #990000, #ff0000);
-            --gold-accent: #d4af37;
-            --text-main: #2c3e50;
-        }
+        :root { --royal-bg: #ffffff; --theme-owner: linear-gradient(90deg, #ff0000, #330000, #ff0000); --gold: #d4af37; }
+        body { margin: 0; background: var(--royal-bg); color: #333; font-family: 'Cairo', sans-serif; height: 100vh; display: flex; overflow: hidden; }
 
-        body { 
-            margin: 0; background: var(--royal-bg); color: var(--text-main); 
-            font-family: 'Cairo', sans-serif; overflow: hidden; height: 100vh; display: flex; 
-        }
+        /* قائمة المتصلين على اليمين */
+        #side { width: 240px; background: #fafafa; border-left: 1px solid #eee; display: flex; flex-direction: column; }
+        .u-row { padding: 12px; border-bottom: 1px solid #f0f0f0; font-size: 13px; font-weight: bold; display: flex; align-items: center; gap: 8px; }
 
-        /* القائمة الجانبية (المتصلين) */
-        #sidebar {
-            width: 260px; background: #fdfdfd; border-left: 1px solid #eee;
-            display: flex; flex-direction: column; transition: 0.3s;
-        }
+        /* المحتوى الرئيسي */
+        #main { flex: 1; display: flex; flex-direction: column; position: relative; }
+        header { padding: 10px 20px; border-bottom: 2px solid #f5f5f5; display: flex; justify-content: space-between; align-items: center; background: #fff; }
 
-        /* الهيدر الأبيض النظيف */
-        header { 
-            padding: 12px 20px; border-bottom: 1px solid #f0f0f0; background: #fff;
-            display: flex; justify-content: space-between; align-items: center;
-        }
+        /* زر التحديث - مثل الصورة */
+        .refresh { cursor: pointer; text-align: center; color: #555; transition: 0.3s; }
+        .refresh:active { transform: rotate(180deg); }
 
-        /* زر التحديث المتحرك */
-        .refresh-btn { 
-            cursor: pointer; display: flex; flex-direction: column; align-items: center;
-            color: var(--gold-accent); transition: 0.3s;
-        }
-        .refresh-btn:hover { transform: rotate(90deg); }
-
-        /* بار الرتبة المتحرك (الثيم اللي طلبته) */
+        /* بار الرتبة الملكي المتحرك */
         .rank-bar {
-            position: relative; width: 200px; height: 32px; 
-            margin: 10px auto; border-radius: 8px; overflow: hidden;
-            display: flex; align-items: center; justify-content: center;
-            color: #fff; font-weight: 900; font-size: 13px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            position: relative; width: 180px; height: 30px; margin: 10px auto;
+            border-radius: 5px; overflow: hidden; display: flex; align-items: center; justify-content: center;
+            color: #fff; font-weight: 900; font-size: 12px; box-shadow: 0 2px 5px rgba(0,0,0,0.2);
         }
-        /* الثيم المتحرك داخل البار */
-        .rank-bar::after {
+        .rank-bar::before {
             content: ""; position: absolute; inset: 0;
-            background: var(--owner-theme); background-size: 200% 200%;
-            animation: move-theme 3s linear infinite; z-index: -1;
+            background: var(--theme-owner); background-size: 200% 200%;
+            animation: move-bg 3s linear infinite; z-index: -1;
         }
-        @keyframes move-theme { 0% { background-position: 0% 50%; } 100% { background-position: 200% 50%; } }
+        @keyframes move-bg { 0% { background-position: 0% 50%; } 100% { background-position: 200% 50%; } }
 
-        /* ساحة الدردشة */
-        #chat-content { flex: 1; display: flex; flex-direction: column; background: #fff; }
-        #messages { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 25px; }
-        
-        .msg-box { width: 100%; display: flex; flex-direction: column; align-items: center; text-align: center; }
-        .msg-text { 
-            max-width: 80%; padding: 12px 20px; border-radius: 15px; 
-            background: #f8f9fa; border: 1px solid #ececec; font-size: 16px; 
-            color: #333; line-height: 1.6;
-        }
-        .owner-style { border: 2px solid #ff0000; background: #fff5f5; }
+        /* الدردشة بالوسط */
+        #chat { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 20px; background: #fff; }
+        .msg-wrap { width: 100%; display: flex; flex-direction: column; align-items: center; text-align: center; }
+        .msg-txt { max-width: 80%; padding: 10px 20px; border-radius: 12px; background: #f1f1f1; color: #000; font-size: 16px; border: 1px solid #e0e0e0; }
+        .owner-box { border: 2px solid #ff0000; background: #fffcfc; }
 
-        /* منطقة الإدخال */
-        .input-area { padding: 15px 25px; border-top: 1px solid #eee; display: flex; gap: 12px; background: #fff; }
-        #mInput { flex: 1; border: 1px solid #ddd; padding: 12px; border-radius: 12px; outline: none; background: #fbfbfb; }
-        .send-btn { background: var(--text-main); color: #fff; border: none; padding: 0 25px; border-radius: 12px; cursor: pointer; font-weight: bold; }
-
+        /* الإدخال */
+        .input-box { padding: 15px; border-top: 1px solid #eee; display: flex; gap: 10px; background: #fff; }
+        #mInp { flex: 1; border: 1px solid #ddd; padding: 10px; border-radius: 8px; outline: none; }
+        .btn-send { background: #333; color: #fff; border: none; padding: 0 20px; border-radius: 8px; cursor: pointer; }
     </style>
 </head>
 <body>
 
-<div id="sidebar">
-    <div style="padding:20px; border-bottom:1px solid #eee; font-weight:900; color:var(--gold-accent);">المتواجدون 🌍</div>
-    <div id="uList" style="flex:1; overflow-y:auto;"></div>
+<div id="side">
+    <div style="padding:15px; background:#f0f0f0; font-weight:900; color:var(--gold);">المتواجدون 🌍</div>
+    <div id="uList"></div>
 </div>
 
-<div id="chat-content">
+<div id="main">
     <header>
-        <div style="font-size: 22px; font-weight: 900; color: var(--text-main);">MASTER RG 👑</div>
-        <div class="refresh-btn" onclick="location.reload()">
-            <span style="font-size:22px;">🔄</span>
-            <span style="font-size:9px; font-weight:bold;">تحديث</span>
+        <div style="font-weight:900; font-size:20px;">MASTER RG 👑</div>
+        <div class="refresh" onclick="location.reload()">
+            <span style="font-size:20px;">🔄</span><br><span style="font-size:8px; font-weight:bold;">تحديث</span>
         </div>
     </header>
 
-    <div id="messages"></div>
+    <div id="chat"></div>
 
-    <div class="input-area">
-        <input type="text" id="mInput" placeholder="اكتب رسالتك الملكية هنا...">
-        <button onclick="send()" class="send-btn">إرسال</button>
+    <div class="input-box">
+        <input type="text" id="mInp" placeholder="اكتب هنا...">
+        <button onclick="send()" class="btn-send">إرسال</button>
     </div>
 </div>
 
@@ -105,53 +78,45 @@
 
     let myName = localStorage.getItem('rg_name') || "";
     if(!myName) {
-        myName = prompt("أهلاً بك في الشات الملكي، ادخل اسمك:");
+        myName = prompt("ادخل اسمك:");
         if(myName) localStorage.setItem('rg_name', myName); else location.reload();
     }
 
+    // رتبة صاحب الشات للماستر
     let myRank = (myName === "ماستر" || myName === "MASTER RG") ? "صاحب الشات" : "عضو ملكي";
 
     function send() {
-        let t = document.getElementById('mInput').value.trim();
+        let t = document.getElementById('mInp').value.trim();
         if(!t) return;
-        db.ref('royal_rooms/main').push({
-            u: myName, t: t, r: myRank, time: Date.now()
-        });
-        document.getElementById('mInput').value = "";
+        db.ref('last_ver/main').push({ u: myName, t: t, r: myRank });
+        document.getElementById('mInp').value = "";
     }
 
     function load() {
-        db.ref('royal_rooms/main').limitToLast(40).on('child_added', snap => {
+        db.ref('last_ver/main').limitToLast(40).on('child_added', snap => {
             let m = snap.val();
             let isOwner = m.r === "صاحب الشات";
             let div = document.createElement('div');
-            div.className = "msg-box";
+            div.className = "msg-wrap";
             div.innerHTML = `
-                <div class="rank-bar" style="${isOwner ? '' : 'background:#2c3e50; border:none;'}">
+                <div class="rank-bar" style="${isOwner ? '' : 'background:#555; border:none;'}">
                     ${isOwner ? '👑 صاحب الشات 👑' : m.r}
                 </div>
-                <div style="font-weight:bold; font-size:13px; margin-bottom:5px; color:#888;">${m.u}</div>
-                <div class="msg-text ${isOwner ? 'owner-style' : ''}">
-                    ${m.t}
-                </div>
+                <div style="font-weight:bold; font-size:12px; margin-bottom:4px; color:#999;">${m.u}</div>
+                <div class="msg-txt ${isOwner ? 'owner-box' : ''}">${m.t}</div>
             `;
-            document.getElementById('messages').appendChild(div);
-            document.getElementById('messages').scrollTop = document.getElementById('messages').scrollHeight;
+            document.getElementById('chat').appendChild(div);
+            document.getElementById('chat').scrollTop = document.getElementById('chat').scrollHeight;
         });
     }
 
-    // نظام المتصلين
-    db.ref('online_users/'+myName).set({ n: myName, r: myRank });
-    db.ref('online_users/'+myName).onDisconnect().remove();
-    db.ref('online_users').on('value', snap => {
-        let list = document.getElementById('uList');
-        list.innerHTML = "";
+    db.ref('online_final/'+myName).set({ n: myName, r: myRank });
+    db.ref('online_final/'+myName).onDisconnect().remove();
+    db.ref('online_final').on('value', snap => {
+        let list = document.getElementById('uList'); list.innerHTML = "";
         snap.forEach(u => {
             let user = u.val();
-            list.innerHTML += `<div style="padding:12px 20px; border-bottom:1px solid #f9f9f9; font-size:14px;">
-                <span style="color:green;">●</span> ${user.n} 
-                <small style="display:block; font-size:10px; color:#aaa;">${user.r}</small>
-            </div>`;
+            list.innerHTML += `<div class="u-row">🟢 ${user.n} <small style="color:#aaa;">(${user.r})</small></div>`;
         });
     });
 
