--- a/index.html
+++ b/index.html
@@ -3,83 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MASTER RG - PRESTIGE</title>
+    <title>MASTER RG - CONTROL SYSTEM</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap" rel="stylesheet">
     <style>
-        :root {
-            --gold: #d4af37;
-            --black-card: #121212;
-            --owner-anim: linear-gradient(90deg, #ff0000, #ff8c00, #ff0000);
+        :root { --royal-blue: #1a2a6c; --danger: #e74c3c; --success: #2ecc71; --gold: #f1c40f; }
+        body { margin: 0; font-family: 'Cairo', sans-serif; background: #f4f7f6; display: flex; height: 100vh; overflow: hidden; }
+        
+        /* القائمة الجانبية */
+        #side { width: 260px; background: #fff; border-left: 1px solid #ddd; display: flex; flex-direction: column; z-index: 10; }
+        .u-card { padding: 12px; border-bottom: 1px solid #eee; cursor: pointer; transition: 0.3s; }
+        .u-card:hover { background: #f9f9f9; }
+        
+        /* منطقة الدردشة */
+        #main { flex: 1; display: flex; flex-direction: column; position: relative; }
+        header { padding: 15px; background: var(--royal-blue); color: #fff; display: flex; justify-content: space-between; align-items: center; }
+        #chat { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; }
+
+        /* فقاعة الرسالة */
+        .msg { max-width: 70%; padding: 10px 15px; border-radius: 12px; background: #fff; box-shadow: 0 2px 5px rgba(0,0,0,0.1); align-self: flex-start; }
+        .msg.owner { border-right: 5px solid var(--danger); background: #fff5f5; }
+        .rank-tag { font-size: 10px; padding: 2px 6px; border-radius: 4px; color: #fff; font-weight: bold; margin-bottom: 4px; display: inline-block; }
+
+        /* نافذة التحكم (Popup) */
+        #admin-menu { 
+            position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);
+            background: #fff; padding: 20px; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+            display: none; z-index: 1000; width: 280px; text-align: center;
         }
-        body { margin: 0; background: #000; color: #fff; font-family: 'Cairo', sans-serif; display: flex; height: 100vh; overflow: hidden; }
+        .admin-btn { width: 100%; padding: 10px; margin: 5px 0; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; color: #fff; }
 
-        /* القائمة الجانبية (المتصلين) */
-        #sidebar { width: 250px; background: #080808; border-left: 1px solid #1a1a1a; display: flex; flex-direction: column; }
-        .u-item { padding: 10px; border-bottom: 1px solid #111; display: flex; align-items: center; gap: 10px; }
-        .u-pfp { width: 40px; height: 40px; border-radius: 50%; border: 1px solid var(--gold); }
-
-        /* الشات الرئيسي */
-        #main { flex: 1; display: flex; flex-direction: column; background: radial-gradient(circle, #1a1a1a 0%, #000 100%); }
-        header { padding: 15px; border-bottom: 2px solid #111; display: flex; justify-content: space-between; align-items: center; background: #050505; }
-
-        /* زر التحديث */
-        .refresh-ui { cursor: pointer; color: var(--gold); text-align: center; }
-        .refresh-ui span { display: block; font-size: 10px; font-weight: bold; }
-
-        /* بار الرتبة الملكي المتحرك */
-        .rank-strip {
-            position: relative; width: 190px; height: 32px; border-radius: 50px; 
-            margin: 0 auto 10px; overflow: hidden; display: flex; align-items: center; 
-            justify-content: center; font-size: 12px; font-weight: 900;
-            box-shadow: 0 0 15px rgba(255,0,0,0.3);
-        }
-        .rank-strip::before {
-            content: ""; position: absolute; inset: 0;
-            background: var(--owner-anim); background-size: 200% 200%;
-            animation: move-rank 3s linear infinite; z-index: -1;
-        }
-        @keyframes move-rank { 0% { background-position: 0% 50%; } 100% { background-position: 200% 50%; } }
-
-        /* الرسائل بالمنتصف */
-        #chat-box { flex: 1; overflow-y: auto; padding: 25px; display: flex; flex-direction: column; gap: 20px; }
-        .msg-unit { display: flex; flex-direction: column; align-items: center; text-align: center; }
-        .msg-bubble { 
-            max-width: 80%; padding: 12px 25px; border-radius: 15px; 
-            background: rgba(255,255,255,0.05); border: 1px solid #222; 
-            font-size: 17px; line-height: 1.5; color: #eee;
-        }
-        .glow-owner { border: 1px solid #ff0000; box-shadow: 0 0 10px rgba(255,0,0,0.2); }
-
-        /* الإدخال */
-        .footer { padding: 15px; background: #050505; display: flex; gap: 10px; border-top: 1px solid #111; }
-        #msgIn { flex: 1; background: #111; border: 1px solid #333; color: #fff; padding: 12px; border-radius: 12px; outline: none; }
-        .send-btn { background: var(--gold); border: none; padding: 0 25px; border-radius: 12px; font-weight: bold; cursor: pointer; color: #000; }
+        .input-area { padding: 15px; background: #fff; display: flex; gap: 10px; border-top: 1px solid #eee; }
+        input { flex: 1; padding: 12px; border: 1px solid #ddd; border-radius: 10px; outline: none; }
+        button#send { background: var(--royal-blue); color: #fff; border: none; padding: 0 20px; border-radius: 10px; cursor: pointer; }
     </style>
 </head>
 <body>
 
-<div id="sidebar">
-    <div style="padding:20px; color:var(--gold); font-weight:900; border-bottom:1px solid #111;">المتواجدون 👑</div>
+<div id="side">
+    <div style="padding:15px; font-weight:900; background:#eee;">المتصلون الآن 👥</div>
     <div id="uList"></div>
 </div>
 
 <div id="main">
     <header>
-        <div style="font-weight:900; font-size:22px; color:var(--gold);">MASTER RG</div>
-        <div class="refresh-ui" onclick="location.reload()">
-            <div style="font-size:20px;">🔄</div>
-            <span>تحديث</span>
-        </div>
+        <div id="myRankDisplay">جاري التحميل...</div>
+        <div onclick="location.reload()" style="cursor:pointer;">🔄 تحديث</div>
     </header>
-
-    <div id="chat-box"></div>
-
-    <div class="footer">
-        <input type="text" id="msgIn" placeholder="تكلم يا إمبراطور...">
-        <button onclick="sendMsg()" class="send-btn">إرسال</button>
+    <div id="chat"></div>
+    <div class="input-area">
+        <input type="text" id="mInp" placeholder="اكتب رسالتك...">
+        <button id="send" onclick="send()">إرسال</button>
     </div>
+</div>
+
+<div id="admin-menu">
+    <h3 id="targetName">اسم العضو</h3>
+    <button class="admin-btn" style="background:var(--danger)" onclick="takeAction('ban')">طرد نهائي (Ban)</button>
+    <button class="admin-btn" style="background:var(--gold)" onclick="takeAction('mute')">كتم (Mute)</button>
+    <button class="admin-btn" style="background:var(--success)" onclick="takeAction('promote')">ترقية لأدمن</button>
+    <button class="admin-btn" style="background:#888" onclick="closeAdmin()">إغلاق</button>
 </div>
 
 <script>
@@ -87,56 +71,87 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    let name = localStorage.getItem('rg_name') || "";
-    if(!name) {
-        name = prompt("ادخل اسمك المستعار:");
-        if(name) localStorage.setItem('rg_name', name); else location.reload();
+    let myName = localStorage.getItem('rg_name') || "";
+    if(!myName) {
+        myName = prompt("ادخل اسمك:");
+        if(myName) localStorage.setItem('rg_name', myName); else location.reload();
     }
 
-    let rank = (name === "ماستر" || name === "MASTER RG") ? "صاحب الشات" : "عضو ملكي";
+    // إعدادات رتبتك (غير اسم "ماستر" لاسمك الحقيقي)
+    let myRank = (myName === "ماستر" || myName === "MASTER RG") ? "صاحب الشات" : "عضو";
+    let isMuted = false;
+    let selectedUser = "";
 
-    function sendMsg() {
-        let t = document.getElementById('msgIn').value.trim();
+    document.getElementById('myRankDisplay').innerText = myName + " (" + myRank + ")";
+
+    // 1. إرسال الرسائل مع فحص الكتم
+    function send() {
+        if(isMuted) return alert("أنت مكتوم من قبل الإدارة!");
+        let t = document.getElementById('mInp').value.trim();
         if(!t) return;
-        db.ref('royal_v1/main').push({ u: name, t: t, r: rank });
-        document.getElementById('msgIn').value = "";
+        db.ref('shilah_chat').push({ u: myName, t: t, r: myRank });
+        document.getElementById('mInp').value = "";
     }
 
-    function load() {
-        db.ref('royal_v1/main').limitToLast(40).on('child_added', snap => {
-            let m = snap.val();
-            let isOwner = m.r === "صاحب الشات";
-            let div = document.createElement('div');
-            div.className = "msg-unit";
-            div.innerHTML = `
-                <div class="rank-strip" style="${isOwner ? '' : 'background:#333; border:none;'}">
-                    ${isOwner ? '⚡ صاحب الشات ⚡' : m.r}
-                </div>
-                <div style="color:var(--gold); font-size:12px; font-weight:bold; margin-bottom:5px;">${m.u}</div>
-                <div class="msg-bubble ${isOwner ? 'glow-owner' : ''}">${m.t}</div>
-            `;
-            document.getElementById('chat-box').appendChild(div);
-            document.getElementById('chat-box').scrollTop = document.getElementById('chat-box').scrollHeight;
-        });
-    }
-
-    db.ref('online_v1/'+name).set({ n: name, r: rank });
-    db.ref('online_v1/'+name).onDisconnect().remove();
-    db.ref('online_v1').on('value', snap => {
-        let list = document.getElementById('uList'); list.innerHTML = "";
-        snap.forEach(u => {
-            let user = u.val();
-            list.innerHTML += `<div class="u-item">
-                <img class="u-pfp" src="https://ui-avatars.com/api/?name=${user.n}&background=random">
-                <div>
-                    <div style="font-size:13px; font-weight:bold;">${user.n}</div>
-                    <div style="font-size:10px; color:#666;">${user.r}</div>
-                </div>
-            </div>`;
-        });
+    // 2. تحميل الرسائل
+    db.ref('shilah_chat').limitToLast(40).on('child_added', snap => {
+        let m = snap.val();
+        let div = document.createElement('div');
+        div.className = "msg " + (m.r === "صاحب الشات" ? "owner" : "");
+        div.innerHTML = `
+            <span class="rank-tag" style="background:${m.r === "صاحب الشات" ? 'red' : '#333'}">${m.r}</span>
+            <b style="display:block; font-size:12px;">${m.u}</b>
+            <span>${m.t}</span>
+        `;
+        document.getElementById('chat').appendChild(div);
+        document.getElementById('chat').scrollTop = document.getElementById('chat').scrollHeight;
     });
 
-    load();
+    // 3. نظام المتصلين والتحكم
+    function startPresence() {
+        db.ref('online_pro/'+myName).set({ n: myName, r: myRank });
+        db.ref('online_pro/'+myName).onDisconnect().remove();
+
+        // فحص إذا تم طردك أو كتمك
+        db.ref('actions/'+myName).on('value', snap => {
+            let action = snap.val();
+            if(action === 'ban') { alert("تم طردك!"); location.href = "about:blank"; }
+            if(action === 'mute') isMuted = true;
+            if(action === 'unmute') isMuted = false;
+        });
+
+        db.ref('online_pro').on('value', snap => {
+            let list = document.getElementById('uList'); list.innerHTML = "";
+            snap.forEach(u => {
+                let user = u.val();
+                let card = document.createElement('div');
+                card.className = "u-card";
+                card.innerHTML = `<b>${user.n}</b> <br> <small>${user.r}</small>`;
+                // فقط صاحب الشات يقدر يفتح قائمة التحكم
+                card.onclick = () => {
+                    if(myRank === "صاحب الشات" && user.n !== myName) {
+                        selectedUser = user.n;
+                        document.getElementById('targetName').innerText = user.n;
+                        document.getElementById('admin-menu').style.display = 'block';
+                    }
+                };
+                list.appendChild(card);
+            });
+        });
+    }
+
+    // 4. تنفيذ الأوامر الإدارية
+    function takeAction(type) {
+        if(type === 'ban') db.ref('actions/'+selectedUser).set('ban');
+        if(type === 'mute') db.ref('actions/'+selectedUser).set('mute');
+        if(type === 'promote') db.ref('online_pro/'+selectedUser+'/r').set('أدمن');
+        closeAdmin();
+        alert("تم تنفيذ الأمر على " + selectedUser);
+    }
+
+    function closeAdmin() { document.getElementById('admin-menu').style.display = 'none'; }
+
+    startPresence();
 </script>
 </body>
 </html>
