--- a/index.html
+++ b/index.html
@@ -2,129 +2,132 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MASTER RG - CONTROL & CHAT</title>
+    <title>تصميم ماستر الملكي 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap" rel="stylesheet">
     <style>
-        :root { --main: #d4af37; --owner: linear-gradient(90deg, #ff0000, #440000, #ff0000); }
-        body { margin: 0; font-family: 'Cairo', sans-serif; background: #fff; display: flex; height: 100vh; overflow: hidden; }
+        /* --- [ 1. إعدادات التصميم العام ] --- */
+        :root {
+            --bg-color: #ffffff;      /* لون الخلفية (أبيض ملكي) */
+            --side-color: #f7f7f7;    /* لون قائمة المتصلين */
+            --main-font: #333333;     /* لون الخط الأساسي */
+            --accent: #d4af37;        /* اللون الذهبي */
+            --owner-theme: linear-gradient(90deg, #ff0000, #000, #ff0000); /* ثيم صاحب الشات */
+        }
 
-        /* القائمة الجانبية */
-        #side { width: 250px; background: #f9f9f9; border-left: 1px solid #eee; display: flex; flex-direction: column; }
-        .u-item { padding: 10px; border-bottom: 1px solid #eee; cursor: pointer; font-weight: bold; }
+        body { margin: 0; background: var(--bg-color); font-family: 'Cairo', sans-serif; display: flex; height: 100vh; overflow: hidden; }
 
-        /* منطقة الدردشة */
-        #main-area { flex: 1; display: flex; flex-direction: column; position: relative; background: #fff; }
-        header { padding: 12px; border-bottom: 2px solid #f0f0f0; display: flex; justify-content: space-between; align-items: center; }
-        
-        #messages { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; }
+        /* --- [ 2. قائمة المتصلين - اليمين ] --- */
+        #sidebar { width: 250px; background: var(--side-color); border-left: 1px solid #ddd; display: flex; flex-direction: column; }
+        .user { padding: 15px; border-bottom: 1px solid #eee; cursor: pointer; font-weight: bold; transition: 0.2s; }
+        .user:hover { background: #e9e9e9; }
 
-        /* الرتبة المتحركة */
+        /* --- [ 3. منطقة الشات - الوسط ] --- */
+        #chat-main { flex: 1; display: flex; flex-direction: column; background: #fff; }
+        header { padding: 15px; border-bottom: 2px solid #f0f0f0; display: flex; justify-content: space-between; align-items: center; }
+        #msg-box { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 20px; text-align: center; }
+
+        /* --- [ 4. الثيمات المتحركة للرتب ] --- */
         .rank-bar {
-            background: var(--owner); background-size: 200% auto; animation: shine 3s linear infinite;
-            color: #fff; padding: 2px 10px; border-radius: 5px; font-size: 11px; margin-bottom: 5px; display: inline-block;
+            background: var(--owner-theme); background-size: 200% auto; animation: moveTheme 3s linear infinite;
+            color: #fff; padding: 4px 20px; border-radius: 50px; font-size: 12px; font-weight: 900; display: inline-block; margin-bottom: 5px;
         }
-        @keyframes shine { to { background-position: 200% center; } }
+        @keyframes moveTheme { to { background-position: 200% center; } }
 
-        /* الرسائل */
-        .msg-box { align-self: center; text-align: center; max-width: 80%; }
-        .msg-text { background: #f1f1f1; padding: 10px 18px; border-radius: 15px; display: inline-block; border: 1px solid #e0e0e0; }
+        .text-wrap { background: #f9f9f9; padding: 12px 25px; border-radius: 15px; border: 1px solid #eee; display: inline-block; max-width: 85%; font-size: 16px; }
 
-        /* لوحة التحكم */
+        /* --- [ 5. منطقة الكتابة - الأسفل ] --- */
+        .input-footer { padding: 15px; border-top: 1px solid #eee; display: flex; gap: 10px; background: #fff; }
+        input { flex: 1; padding: 12px; border: 1px solid #ccc; border-radius: 8px; outline: none; }
+        button#send { background: #222; color: #fff; border: none; padding: 0 25px; border-radius: 8px; cursor: pointer; font-weight: bold; }
+
+        /* --- [ 6. لوحة التحكم - الصلاحيات ] --- */
         #adminPanel {
-            position: fixed; top: 30%; left: 50%; transform: translate(-50%, -50%);
-            background: #fff; border: 2px solid red; padding: 20px; border-radius: 15px;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.3); display: none; z-index: 2000; text-align: center;
+            position: fixed; top: 40%; left: 50%; transform: translate(-50%, -50%);
+            background: #fff; border: 3px solid #ff0000; padding: 25px; border-radius: 20px;
+            box-shadow: 0 0 50px rgba(0,0,0,0.4); display: none; z-index: 9999; text-align: center; width: 280px;
         }
-        .adm-btn { width: 100%; padding: 10px; margin: 5px 0; border: none; border-radius: 5px; color: #fff; font-weight: bold; cursor: pointer; }
-
-        /* خانة الكتابة - تأكدت من ظهورها */
-        .input-box { 
-            padding: 15px; border-top: 1px solid #eee; background: #fff; 
-            display: flex; gap: 10px; align-items: center;
-        }
-        #mInput { flex: 1; padding: 12px; border: 1px solid #ddd; border-radius: 10px; outline: none; background: #fcfcfc; }
-        #sendBtn { background: #333; color: #fff; border: none; padding: 10px 20px; border-radius: 10px; cursor: pointer; font-weight: bold; }
+        .adm-btn { width: 100%; padding: 12px; margin: 8px 0; border: none; border-radius: 8px; color: #fff; font-weight: bold; cursor: pointer; }
     </style>
 </head>
 <body>
 
-<div id="side">
-    <div style="padding:15px; background:#eee; font-weight:900;">المتصلون 🌍</div>
-    <div id="uList"></div>
+<div id="sidebar">
+    <div style="padding:20px; background:#eee; font-weight:900; color:var(--accent);">المتواجدون حالياً 👥</div>
+    <div id="userList"></div>
 </div>
 
-<div id="main-area">
+<div id="chat-main">
     <header>
-        <b style="color:var(--main)">MASTER RG 👑</b>
-        <div onclick="location.reload()" style="cursor:pointer; font-size: 12px;">🔄 تحديث الشات</div>
+        <span style="font-size:22px; font-weight:900; color:#222;">MASTER RG 👑</span>
+        <button onclick="location.reload()" style="background:none; border:1px solid #ccc; padding:5px 15px; cursor:pointer; border-radius:5px;">تحديث 🔄</button>
     </header>
 
-    <div id="messages"></div>
+    <div id="msg-box"></div>
 
-    <div class="input-box">
-        <input type="text" id="mInput" placeholder="اكتب رسالتك هنا...">
-        <button id="sendBtn" onclick="send()">إرسال</button>
+    <div class="input-footer">
+        <input type="text" id="mInput" placeholder="أدخل رسالتك يا إمبراطور...">
+        <button id="send" onclick="send()">إرسال</button>
     </div>
 </div>
 
 <div id="adminPanel">
-    <h4 id="targetName">اسم العضو</h4>
+    <h3 id="targetName">اسم العضو</h3>
     <button class="adm-btn" style="background:red" onclick="fire('kick')">طرد نهائي ⛔</button>
-    <button class="adm-btn" style="background:orange" onclick="fire('mute')">كتم مؤقت 🔇</button>
-    <button class="adm-btn" style="background:green" onclick="fire('up')">ترقية مشرف 🎖️</button>
-    <button onclick="document.getElementById('adminPanel').style.display='none'" style="margin-top:10px; background:none; border:none; cursor:pointer;">إغلاق</button>
+    <button class="adm-btn" style="background:orange" onclick="fire('mute')">كتم الصوت 🔇</button>
+    <button onclick="document.getElementById('adminPanel').style.display='none'" style="margin-top:10px; border:none; background:none; cursor:pointer; color:#888;">إلغاء</button>
 </div>
 
 <script>
+    // --- [ برمجة المحرك ] ---
     const config = { databaseURL: "https://masterchat-f2da9-default-rtdb.firebaseio.com" };
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    let myName = localStorage.getItem('rg_name') || prompt("ادخل اسمك:");
+    let myName = localStorage.getItem('rg_name') || prompt("أهلاً بك، ادخل اسمك:");
     if(myName) localStorage.setItem('rg_name', myName);
 
-    // نظام الرتب: غير "ماستر" لاسمك الحقيقي لتفعيل الصلاحيات
+    // نظام التعرف على المالك (عدل "ماستر" لاسمك)
     let myRank = (myName === "ماستر" || myName === "MASTER RG") ? "صاحب الشات" : "عضو ملكي";
-    let muted = false;
-    let target = "";
+    let isMuted = false;
+    let selectedUser = "";
 
     function send() {
-        if(muted) return alert("أنت مكتوم!");
+        if(isMuted) return alert("أنت مكتوم!");
         let t = document.getElementById('mInput').value.trim();
         if(!t) return;
-        db.ref('shilah_pro/msgs').push({ u: myName, t: t, r: myRank });
+        db.ref('royal_chat/msgs').push({ u: myName, t: t, r: myRank });
         document.getElementById('mInput').value = "";
     }
 
-    db.ref('shilah_pro/msgs').limitToLast(30).on('child_added', snap => {
+    db.ref('royal_chat/msgs').limitToLast(40).on('child_added', snap => {
         let m = snap.val();
         let div = document.createElement('div');
-        div.className = "msg-box";
         div.innerHTML = `
-            <div class="rank-bar" style="${m.r === 'صاحب الشات' ? '' : 'background:#555'}">${m.r}</div><br>
-            <b style="font-size:11px; color:#888;">${m.u}</b><br>
-            <div class="msg-text">${m.t}</div>
+            <div>
+                <div class="rank-bar" style="${m.r === 'صاحب الشات' ? '' : 'background:#444'}">${m.r}</div><br>
+                <b style="font-size:12px; color:#999;">${m.u}</b><br>
+                <div class="text-wrap">${m.t}</div>
+            </div>
         `;
-        document.getElementById('messages').appendChild(div);
-        document.getElementById('messages').scrollTop = document.getElementById('messages').scrollHeight;
+        document.getElementById('msg-box').appendChild(div);
+        document.getElementById('msg-box').scrollTop = document.getElementById('msg-box').scrollHeight;
     });
 
-    db.ref('online_shilah/'+myName).set({ n: myName, r: myRank });
-    db.ref('online_shilah/'+myName).onDisconnect().remove();
+    db.ref('online/'+myName).set({ n: myName, r: myRank });
+    db.ref('online/'+myName).onDisconnect().remove();
 
-    db.ref('online_shilah').on('value', snap => {
-        let list = document.getElementById('uList'); list.innerHTML = "";
+    db.ref('online').on('value', snap => {
+        let list = document.getElementById('userList'); list.innerHTML = "";
         snap.forEach(u => {
             let user = u.val();
             let div = document.createElement('div');
-            div.className = "u-item";
-            div.innerHTML = `<span>●</span> ${user.n} <small>(${user.r})</small>`;
+            div.className = "user";
+            div.innerText = "● " + user.n;
             div.onclick = () => {
                 if(myRank === "صاحب الشات" && user.n !== myName) {
-                    target = user.n;
+                    selectedUser = user.n;
                     document.getElementById('targetName').innerText = user.n;
                     document.getElementById('adminPanel').style.display = 'block';
                 }
@@ -133,23 +136,15 @@
         });
     });
 
-    // تنفيذ الصلاحيات
     function fire(type) {
-        if(type === 'kick') db.ref('actions/'+target).set('kick');
-        if(type === 'mute') db.ref('actions/'+target).set('mute');
-        if(type === 'up') db.ref('online_shilah/'+target+'/r').set('مشرف');
+        db.ref('commands/'+selectedUser).set(type);
         document.getElementById('adminPanel').style.display = 'none';
     }
 
-    // الاستجابة للأوامر
-    db.ref('actions/'+myName).on('value', snap => {
-        if(snap.val() === 'kick') {
-            alert("تم طردك!");
-            document.body.innerHTML = "<h1>مطرووووود ⛔</h1>";
-        }
-        if(snap.val() === 'mute') muted = true;
+    db.ref('commands/'+myName).on('value', snap => {
+        if(snap.val() === 'kick') document.body.innerHTML = "<h1 style='text-align:center; padding-top:100px;'>تم طردك بواسطة صاحب الشات ⛔</h1>";
+        if(snap.val() === 'mute') isMuted = true;
     });
-
 </script>
 </body>
 </html>
