--- a/index.html
+++ b/index.html
@@ -1,150 +1,31 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <title>تصميم ماستر الملكي 👑</title>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap" rel="stylesheet">
-    <style>
-        /* --- [ 1. إعدادات التصميم العام ] --- */
-        :root {
-            --bg-color: #ffffff;      /* لون الخلفية (أبيض ملكي) */
-            --side-color: #f7f7f7;    /* لون قائمة المتصلين */
-            --main-font: #333333;     /* لون الخط الأساسي */
-            --accent: #d4af37;        /* اللون الذهبي */
-            --owner-theme: linear-gradient(90deg, #ff0000, #000, #ff0000); /* ثيم صاحب الشات */
-        }
+// 1. الربط بمشروعك (حسب الصور اللي دزيتها)
+const db = firebase.database();
 
-        body { margin: 0; background: var(--bg-color); font-family: 'Cairo', sans-serif; display: flex; height: 100vh; overflow: hidden; }
+// 2. هذا الاسم اللي راح تدخله في خانة الاسم بالشات
+let myName = "علوش"; 
+let iAmTheMaster = false;
 
-        /* --- [ 2. قائمة المتصلين - اليمين ] --- */
-        #sidebar { width: 250px; background: var(--side-color); border-left: 1px solid #ddd; display: flex; flex-direction: column; }
-        .user { padding: 15px; border-bottom: 1px solid #eee; cursor: pointer; font-weight: bold; transition: 0.2s; }
-        .user:hover { background: #e9e9e9; }
-
-        /* --- [ 3. منطقة الشات - الوسط ] --- */
-        #chat-main { flex: 1; display: flex; flex-direction: column; background: #fff; }
-        header { padding: 15px; border-bottom: 2px solid #f0f0f0; display: flex; justify-content: space-between; align-items: center; }
-        #msg-box { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 20px; text-align: center; }
-
-        /* --- [ 4. الثيمات المتحركة للرتب ] --- */
-        .rank-bar {
-            background: var(--owner-theme); background-size: 200% auto; animation: moveTheme 3s linear infinite;
-            color: #fff; padding: 4px 20px; border-radius: 50px; font-size: 12px; font-weight: 900; display: inline-block; margin-bottom: 5px;
-        }
-        @keyframes moveTheme { to { background-position: 200% center; } }
-
-        .text-wrap { background: #f9f9f9; padding: 12px 25px; border-radius: 15px; border: 1px solid #eee; display: inline-block; max-width: 85%; font-size: 16px; }
-
-        /* --- [ 5. منطقة الكتابة - الأسفل ] --- */
-        .input-footer { padding: 15px; border-top: 1px solid #eee; display: flex; gap: 10px; background: #fff; }
-        input { flex: 1; padding: 12px; border: 1px solid #ccc; border-radius: 8px; outline: none; }
-        button#send { background: #222; color: #fff; border: none; padding: 0 25px; border-radius: 8px; cursor: pointer; font-weight: bold; }
-
-        /* --- [ 6. لوحة التحكم - الصلاحيات ] --- */
-        #adminPanel {
-            position: fixed; top: 40%; left: 50%; transform: translate(-50%, -50%);
-            background: #fff; border: 3px solid #ff0000; padding: 25px; border-radius: 20px;
-            box-shadow: 0 0 50px rgba(0,0,0,0.4); display: none; z-index: 9999; text-align: center; width: 280px;
-        }
-        .adm-btn { width: 100%; padding: 12px; margin: 8px 0; border: none; border-radius: 8px; color: #fff; font-weight: bold; cursor: pointer; }
-    </style>
-</head>
-<body>
-
-<div id="sidebar">
-    <div style="padding:20px; background:#eee; font-weight:900; color:var(--accent);">المتواجدون حالياً 👥</div>
-    <div id="userList"></div>
-</div>
-
-<div id="chat-main">
-    <header>
-        <span style="font-size:22px; font-weight:900; color:#222;">MASTER RG 👑</span>
-        <button onclick="location.reload()" style="background:none; border:1px solid #ccc; padding:5px 15px; cursor:pointer; border-radius:5px;">تحديث 🔄</button>
-    </header>
-
-    <div id="msg-box"></div>
-
-    <div class="input-footer">
-        <input type="text" id="mInput" placeholder="أدخل رسالتك يا إمبراطور...">
-        <button id="send" onclick="send()">إرسال</button>
-    </div>
-</div>
-
-<div id="adminPanel">
-    <h3 id="targetName">اسم العضو</h3>
-    <button class="adm-btn" style="background:red" onclick="fire('kick')">طرد نهائي ⛔</button>
-    <button class="adm-btn" style="background:orange" onclick="fire('mute')">كتم الصوت 🔇</button>
-    <button onclick="document.getElementById('adminPanel').style.display='none'" style="margin-top:10px; border:none; background:none; cursor:pointer; color:#888;">إلغاء</button>
-</div>
-
-<script>
-    // --- [ برمجة المحرك ] ---
-    const config = { databaseURL: "https://masterchat-f2da9-default-rtdb.firebaseio.com" };
-    firebase.initializeApp(config);
-    const db = firebase.database();
-
-    let myName = localStorage.getItem('rg_name') || prompt("أهلاً بك، ادخل اسمك:");
-    if(myName) localStorage.setItem('rg_name', myName);
-
-    // نظام التعرف على المالك (عدل "ماستر" لاسمك)
-    let myRank = (myName === "ماستر" || myName === "MASTER RG") ? "صاحب الشات" : "عضو ملكي";
-    let isMuted = false;
-    let selectedUser = "";
-
-    function send() {
-        if(isMuted) return alert("أنت مكتوم!");
-        let t = document.getElementById('mInput').value.trim();
-        if(!t) return;
-        db.ref('royal_chat/msgs').push({ u: myName, t: t, r: myRank });
-        document.getElementById('mInput').value = "";
+// 3. فحص الصلاحية من السيرفر (الجزء الأهم)
+db.ref('master').on('value', (snapshot) => {
+    if (snapshot.val() === myName) {
+        iAmTheMaster = true;
+        console.log("تم تفعيل صلاحيات الإمبراطور علوش 👑");
+        // هنا الكود يظهر لك أزرار التحكم تلقائياً
+        document.getElementById('admin-btn').style.display = 'block';
     }
+});
 
-    db.ref('royal_chat/msgs').limitToLast(40).on('child_added', snap => {
-        let m = snap.val();
-        let div = document.createElement('div');
-        div.innerHTML = `
-            <div>
-                <div class="rank-bar" style="${m.r === 'صاحب الشات' ? '' : 'background:#444'}">${m.r}</div><br>
-                <b style="font-size:12px; color:#999;">${m.u}</b><br>
-                <div class="text-wrap">${m.t}</div>
-            </div>
-        `;
-        document.getElementById('msg-box').appendChild(div);
-        document.getElementById('msg-box').scrollTop = document.getElementById('msg-box').scrollHeight;
-    });
-
-    db.ref('online/'+myName).set({ n: myName, r: myRank });
-    db.ref('online/'+myName).onDisconnect().remove();
-
-    db.ref('online').on('value', snap => {
-        let list = document.getElementById('userList'); list.innerHTML = "";
-        snap.forEach(u => {
-            let user = u.val();
-            let div = document.createElement('div');
-            div.className = "user";
-            div.innerText = "● " + user.n;
-            div.onclick = () => {
-                if(myRank === "صاحب الشات" && user.n !== myName) {
-                    selectedUser = user.n;
-                    document.getElementById('targetName').innerText = user.n;
-                    document.getElementById('adminPanel').style.display = 'block';
-                }
-            };
-            list.appendChild(div);
+// 4. وظيفة "الطرد" البرمجية
+function kickUser(targetName) {
+    if (iAmTheMaster) {
+        // إرسال أمر طرد للعضو المستهدف في قاعدة البيانات
+        db.ref('actions/' + targetName).set({
+            type: 'KICK',
+            admin: myName,
+            time: Date.now()
         });
-    });
-
-    function fire(type) {
-        db.ref('commands/'+selectedUser).set(type);
-        document.getElementById('adminPanel').style.display = 'none';
+        alert("تم طرد " + targetName + " بنجاح ✅");
+    } else {
+        alert("عذراً، أنت لا تملك صلاحية الماستر ❌");
     }
-
-    db.ref('commands/'+myName).on('value', snap => {
-        if(snap.val() === 'kick') document.body.innerHTML = "<h1 style='text-align:center; padding-top:100px;'>تم طردك بواسطة صاحب الشات ⛔</h1>";
-        if(snap.val() === 'mute') isMuted = true;
-    });
-</script>
-</body>
-</html>
+}
